spec change: flow collection item
