# layers/utils/schema.py
@@ -1,3 +1,4 @@
+# pylint: disable=too-many-lines
 # generated by datamodel-codegen:
 #   filename:  openapi.yaml
 
@@ -304,6 +305,103 @@ class Webhook(BaseModel):
     accept_get_urls: Optional[List[str]] = Field(
         None,
         description="List of labels of URLs to include in the `get_urls` property in `flows/segments_added` events. This option is the same as the `accept_get_urls` query parameter for the /flows/{flowId}/segments API endpoint, except that the labels are represented using a JSON array rather than a (comma separated list) string.",
+    )
+
+
+class Collectionitem(BaseModel):
+    """
+    Describes how an object (Source or Flow) is collected into another object of the same type
+    """
+
+    id: constr(
+        pattern=r"^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$"
+    ) = Field(
+        ...,
+        description="Source or Flow Identifier of the member of this collection. Sources must only collect Sources, and Flows must only collect Flows. Must already be registered in TAMS",
+    )
+    role: str = Field(
+        ...,
+        description="A human-readable role of the element in this collection (e.g. 'R' to denote a right audio channel in a collection of mono audio Sources)",
+    )
+
+
+class ChannelNumber(RootModel[conint(ge=0)]):
+    root: conint(ge=0)
+
+
+class AudioTrack(BaseModel):
+    """
+    Mapping for channels in audio tracks to the Flow channels
+    """
+
+    channel_numbers: Optional[List[ChannelNumber]] = Field(
+        None,
+        description="Array of (zero-based) container channel numbers in Flow order",
+        min_length=1,
+    )
+    channel_range: Optional[constr(pattern=r"^[0-9]+_[0-9]+$")] = Field(
+        None, description="Inclusive range of (zero-based) container channel numbers"
+    )
+
+
+class Mp2tsContainer(BaseModel):
+    """
+    Mapping to MPEG-2 Transport Stream containers, ISO/IEC 13818-1 or ITU-T Recommendation H.222.0
+    """
+
+    pid: Optional[int] = Field(
+        None, description="The packet ID for the elementary stream packets"
+    )
+
+
+class MxfContainer(BaseModel):
+    """
+    Mapping to Material Exchange Format containers, SMPTE ST 377-1
+    """
+
+    package_uid: Optional[
+        constr(
+            pattern=r"^urn:smpte:umid:[0-9a-fA-F]{8}(.[0-9a-fA-F]{8}){7}$|^urn:uuid:[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$"
+        )
+    ] = Field(None, description="The package UID. Either a SMPTE UMID URN or UUID URN")
+    track_id: Optional[int] = Field(None, description="The track ID in the package")
+
+
+class IsobmffContainer(BaseModel):
+    """
+    Mapping to ISO Base Media File Format (e.g. MP4 and MOV) containers, ISO/IEC 14496-12
+    """
+
+    track_id: Optional[int] = Field(None, description="The track ID")
+
+
+class Containermapping(BaseModel):
+    """
+    Defines the location of Flow essence data in a container track
+    """
+
+    track_index: Optional[conint(ge=0)] = Field(
+        None,
+        description="A zero-based and sequential track index in the container. This assumes a reliable ordering of tracks",
+    )
+    format_track_index: Optional[conint(ge=0)] = Field(
+        None,
+        description="A zero-based and sequential track index in the container for a particular Flow format. A container with a video and 2 audio tracks would have a format_track_index 0 for the video Flow and format_track_index 0 and 1 for the audio Flows. This assumes a reliable ordering of tracks for each Flow format",
+    )
+    audio_track: Optional[AudioTrack] = Field(
+        None, description="Mapping for channels in audio tracks to the Flow channels"
+    )
+    mp2ts_container: Optional[Mp2tsContainer] = Field(
+        None,
+        description="Mapping to MPEG-2 Transport Stream containers, ISO/IEC 13818-1 or ITU-T Recommendation H.222.0",
+    )
+    mxf_container: Optional[MxfContainer] = Field(
+        None,
+        description="Mapping to Material Exchange Format containers, SMPTE ST 377-1",
+    )
+    isobmff_container: Optional[IsobmffContainer] = Field(
+        None,
+        description="Mapping to ISO Base Media File Format (e.g. MP4 and MOV) containers, ISO/IEC 14496-12",
     )
 
 
@@ -665,86 +763,6 @@ class Timestamp(RootModel[constr(pattern=r"^-?(0|[1-9][0-9]*):(0|[1-9][0-9]{0,8}
     )
 
 
-class ChannelNumber(RootModel[conint(ge=0)]):
-    root: conint(ge=0)
-
-
-class AudioTrack(BaseModel):
-    """
-    Mapping for channels in audio tracks to the Flow channels
-    """
-
-    channel_numbers: Optional[List[ChannelNumber]] = Field(
-        None,
-        description="Array of (zero-based) container channel numbers in Flow order",
-        min_length=1,
-    )
-    channel_range: Optional[constr(pattern=r"^[0-9]+_[0-9]+$")] = Field(
-        None, description="Inclusive range of (zero-based) container channel numbers"
-    )
-
-
-class Mp2tsContainer(BaseModel):
-    """
-    Mapping to MPEG-2 Transport Stream containers, ISO/IEC 13818-1 or ITU-T Recommendation H.222.0
-    """
-
-    pid: Optional[int] = Field(
-        None, description="The packet ID for the elementary stream packets"
-    )
-
-
-class MxfContainer(BaseModel):
-    """
-    Mapping to Material Exchange Format containers, SMPTE ST 377-1
-    """
-
-    package_uid: Optional[
-        constr(
-            pattern=r"^urn:smpte:umid:[0-9a-fA-F]{8}(.[0-9a-fA-F]{8}){7}$|^urn:uuid:[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$"
-        )
-    ] = Field(None, description="The package UID. Either a SMPTE UMID URN or UUID URN")
-    track_id: Optional[int] = Field(None, description="The track ID in the package")
-
-
-class IsobmffContainer(BaseModel):
-    """
-    Mapping to ISO Base Media File Format (e.g. MP4 and MOV) containers, ISO/IEC 14496-12
-    """
-
-    track_id: Optional[int] = Field(None, description="The track ID")
-
-
-class Containermapping(BaseModel):
-    """
-    Defines the location of Flow essence data in a container track
-    """
-
-    track_index: Optional[conint(ge=0)] = Field(
-        None,
-        description="A zero-based and sequential track index in the container. This assumes a reliable ordering of tracks",
-    )
-    format_track_index: Optional[conint(ge=0)] = Field(
-        None,
-        description="A zero-based and sequential track index in the container for a particular Flow format. A container with a video and 2 audio tracks would have a format_track_index 0 for the video Flow and format_track_index 0 and 1 for the audio Flows. This assumes a reliable ordering of tracks for each Flow format",
-    )
-    audio_track: Optional[AudioTrack] = Field(
-        None, description="Mapping for channels in audio tracks to the Flow channels"
-    )
-    mp2ts_container: Optional[Mp2tsContainer] = Field(
-        None,
-        description="Mapping to MPEG-2 Transport Stream containers, ISO/IEC 13818-1 or ITU-T Recommendation H.222.0",
-    )
-    mxf_container: Optional[MxfContainer] = Field(
-        None,
-        description="Mapping to Material Exchange Format containers, SMPTE ST 377-1",
-    )
-    isobmff_container: Optional[IsobmffContainer] = Field(
-        None,
-        description="Mapping to ISO Base Media File Format (e.g. MP4 and MOV) containers, ISO/IEC 14496-12",
-    )
-
-
 class SegmentDuration(BaseModel):
     """
     The target flow segment duration in seconds. The duration for each segment may vary around this target value. See also the [Setting Flow Bit Rate Properties](https://github.com/bbc/tams/blob/main/docs/appnotes/0013-setting-flow-bit-rate-properties.md) AppNote for how this property can be used to calculate buffer sizes.
@@ -799,6 +817,17 @@ class Deletionrequest(BaseModel):
 
 class Deletionrequestslist(RootModel[List[Deletionrequest]]):
     root: List[Deletionrequest] = Field(..., title="Deletion Requests List")
+
+
+class FlowcollectionItem(Collectionitem):
+    container_mapping: Optional[Containermapping] = Field(
+        None,
+        description="Describes the mapping of the Flow essence from this Flow collection's container",
+    )
+
+
+class Flowcollection(RootModel[List[FlowcollectionItem]]):
+    root: List[FlowcollectionItem] = Field(..., title="Flow Collection")
 
 
 class FailedSegment(BaseModel):
@@ -940,31 +969,6 @@ class Service(BaseModel):
         None,
         description="List the types of event stream that this implementation supports",
     )
-
-
-class Collectionitem(BaseModel):
-    """
-    Describes how an object (Source or Flow) is collected into another object of the same type
-    """
-
-    id: constr(
-        pattern=r"^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$"
-    ) = Field(
-        ...,
-        description="Source or Flow Identifier of the member of this collection. Sources must only collect Sources, and Flows must only collect Flows. Must already be registered in TAMS",
-    )
-    role: str = Field(
-        ...,
-        description="A human-readable role of the element in this collection (e.g. 'R' to denote a right audio channel in a collection of mono audio Sources)",
-    )
-    container_mapping: Optional[Containermapping] = Field(
-        None,
-        description="Describes the mapping of the Flow essence from this Flow collection's container",
-    )
-
-
-class Flowcollection(RootModel[List[Collectionitem]]):
-    root: List[Collectionitem] = Field(..., title="Flow Collection")
 
 
 class Source(BaseModel):
